start: Improve ClusterFinder toggle-switch looks
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/app/start/start.html
+++ b/app/start/start.html
@@ -61,9 +61,9 @@
             <div class="col-md-3">
               <label class="col-md-6">ClusterFinder</label>
               <div class="col-md-6">
-                <toggle-switch ng-model="ctrl.clusterfinder"></toggle-switch>
+                <toggle-switch ng-model="ctrl.clusterfinder" class="switch-mini"></toggle-switch>
               </div>
-              <p class="help-block">Probabilistic BGC detection</p>
+              <p class="col-md-12">Probabilistic BGC detection</p>
             </div>
             <div class="col-md-9" ng-show="ctrl.clusterfinder">
               <label for="cf_cdsnr" class="col-md-8">Minimum cluster size in CDS</label>
