--- a/app/start/start.html
+++ b/app/start/start.html
@@ -52,10 +52,12 @@
               <label for="ncbi" class="col-md-6">NCBI accession number of desired sequence</label>
             </div>
           </div>
-
           <div class="form-group row" ng-show="ctrl.showGffInput()">
             <div class="col-md-7">
               <div class="input-group">
+                <span class="input-group-btn">
+                  <button class="btn btn-default" type="button"><i class="fa fa-trash" ng-click="ctrl.clearGff()"></i></button>
+                </span>
                 <input class="form-control" type="text" ng-model="ctrl.gff_file.name" readonly>
                 <span class="input-group-btn">
                   <span class="btn btn-default btn-file"> Browse
