--- a/app/index.html
+++ b/app/index.html
@@ -62,7 +62,7 @@
         <img src="images/fungismash_logo.svg" height="100px">
       </div>
       <div class="col-sm-8 cite-me well">
-        If you have found antiSMASH useful, please <a href="#/about">cite us</a>.
+        If you have found antiSMASH useful, please <a href="#!/about">cite us</a>.
       </div>
       <div class="col-sm-2">
         <img src="images/fungismash_icon.svg" height="100px">
