index: Link to bacterial antiSMASH page for help and contact form
Signed-off-by: Kai Blin <kblin@biosustain.dtu.dk>

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,8 @@
         <li><a href="http://plantismash.secondarymetabolites.org/"><img src="images/plantismash_icon_white.svg" height="25px"> &nbsp; Submit Plant Sequence</a></li>
         <li><a href="http://antismash.secondarymetabolites.org/#!/download"><i class="fa fa-download"></i> &nbsp; Download</a></li>
         <li><a href="#!/about"><i class="fa fa-info"></i> &nbsp; About</a></li>
-        <li><a href="#!/help"><i class="fa fa-question"></i> &nbsp; Help</a></li>
+        <li><a href="http://antismash.secondarymetabolites.org/#!/help"><i class="fa fa-question"></i> &nbsp; Help</a></li>
+        <li><a href="http://antismash.secondarymetabolites.org/#!/contact"><i class="fa fa-envelope"></i> &nbsp; Contact</a></li>
       </ul>
     </div>
   </nav>
@@ -62,7 +63,7 @@
         <img src="images/fungismash_logo.svg" height="100px">
       </div>
       <div class="col-sm-8 cite-me well">
-        If you have found antiSMASH useful, please <a href="#!/about">cite us</a>.
+        If you have found fungal antiSMASH useful, please <a href="#!/about">cite us</a>.
       </div>
       <div class="col-sm-2">
         <img src="images/fungismash_icon.svg" height="100px">
